[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/UI/Pause-wooden-panel.png" type="Texture" id=1]
[ext_resource path="res://art/UI/bottom-ui.png" type="Texture" id=2]
[ext_resource path="res://art/UI/shuffle-wooden-panel.png" type="Texture" id=3]
[ext_resource path="res://art/UI/diamonde-wooden-panel.png" type="Texture" id=4]
[ext_resource path="res://art/UI/Plus-5-wooden-panel.png" type="Texture" id=5]
[ext_resource path="res://scripts/bottomUi.gd" type="Script" id=6]
[ext_resource path="res://art/UI/Plus-10-wooden-panel.png" type="Texture" id=7]

[node name="bottomUi" type="TextureRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -92.0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 6 )
time_texture = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_top = -50
custom_constants/margin_left = 54

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 54.0
margin_top = -50.0
margin_right = 529.0
margin_bottom = 50.0
custom_constants/separation = 25
alignment = 1

[node name="Pause" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="AddMovesBoost" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 225.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="ShuffleBoost" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 250.0
margin_right = 350.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="DiamondBoost" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 375.0
margin_right = 475.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/HBoxContainer/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/AddMovesBoost" to="." method="_on_AddMovesBoost_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ShuffleBoost" to="." method="_on_ShuffleBoost_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DiamondBoost" to="." method="_on_DiamondBoost_pressed"]
